# prompti

./: DESIGN.md  LICENSE  Makefile  Prompt_Library_Design.md  README.md  pyproject.toml
client/: DESIGN.md
docs/: DESIGN.md
examples/: basic.py  basic_sync.py  chat_cli.py  template_format.py
prompti/: __init__.py  engine.py  experiment.py  loader.py  loaders.py  message.py  model_client.py  model_config_loader.py  replay.py  template.py
prompti/loader/: __init__.py  agenta.py  base.py  file.py  filesystem.py  github_repo.py  http.py  langfuse.py  local_git_repo.py  memory.py  pezzo.py  promptlayer.py
prompti/model_client/: __init__.py  base.py  claude.py  config_loader.py  factory.py  litellm.py  openai.py  openai_base.py  openrouter.py  qianfan.py  rust.py
prompti/model_client_rs/: Cargo.toml  README.md  model_client.py
prompti/model_client_rs/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  providers.rs  streaming.rs  types.rs  utils.rs
prompts/: multi_modal_analysis.yaml  summary.yaml  support_reply.jinja  support_reply.yaml  task_manager.yaml
prompts/multi/: summary.jinja
src/prompti/: __init__.py  engine.py  experiment.py  message.py  replay.py  template.py  trace.py
src/prompti/hooks/: __init__.py  anonymize.py  desensitization.py
src/prompti/loader/: __init__.py  base.py  file.py  github_repo.py  http.py  langfuse.py  local_git_repo.py  memory.py
src/prompti/model_client/: __init__.py  base.py  config_loader.py  factory.py  litellm.py  openai_client.py  qianfan_client.py
tests/: claude_mock_server.py  mock_server.py  openai_mock_server.py  test_anthropic_client.py  test_claude_client.py  test_engine.py  test_engine_tools.py  test_experiment.py  test_format.py  test_litellm_client.py  test_model_client.py  test_openai_client.py  test_qianfan_client.py  test_replay.py  test_rust_client.py  test_template_format.py  test_template_yaml.py  test_tracing.py  test_version_selector.py
tests/configs/prompts/: summary.yaml
tests/data/: anthropic_record.jsonl  claude_record.jsonl  litellm_record.jsonl  openai_record.jsonl  qianfan_record.jsonl
tests/loader/: test_http.py
tests/model_client/: test_config_loader.py
tests/template/: test_template_format.py  test_version_selector.py
