[package]
name = "model-client-rs"
version = "0.1.0"
edition = "2021"
authors = ["Model Client Team"]
description = "A comprehensive Rust ModelClient implementation supporting OpenAI and Claude"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async streams
tokio-stream = "0.1"
bytes = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# URL handling
url = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0" 